# vox-agent-os

./: .gitignore  LICENSE  LICENSE.bsl.md  README.md  pyproject.toml
pkg/agents/licensed/crew_ai/soc2_auditor/: soc2_auditor_crew.py  specialized_agents.py
pkg/agents/open/crew_ai/pdf_summarizer/: pdf_summarizer_crew.py  specialized_agents.py
pkg/agents/open/crew_ai/slack_messager/: slack_messager_crew.py  specialized_agents.py
pkg/interfaces/cli/: main.py  soc2_runner.py
pkg/kernel/: agent.py
pkg/tools/licensed/soc2_auditor/: __init__.py  gdrive_reader.py  jira_fetcher.py  policy_checker.py  report_writer.py
pkg/tools/open/: slack_messager.py  summarize.py
pkg/voice/: recorder.py  transcriber.py
scripts/: setup_composio_slack_integration.py
